--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: books
+#
+#  id         :integer          not null, primary key
+#  title      :string(255)
+#  author     :string(255)
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#  image_url  :string(255)
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
