--- a/test/fixtures/collections.yml
+++ b/test/fixtures/collections.yml
@@ -1,3 +1,15 @@
+# == Schema Information
+#
+# Table name: collections
+#
+#  id         :integer          not null, primary key
+#  user_id    :integer
+#  book_id    :integer
+#  created_at :datetime         not null
+#  updated_at :datetime         not null
+#  status     :boolean
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
